--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="../lib/css/gridsystem.css">
     <link rel="stylesheet" href="../lib/css/styleguide.css">
     <link rel="stylesheet" href="../css/storetheme.css">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
@@ -178,13 +180,14 @@
     <script>
         const makeNav = (classes='') => {
             const links = ['home','store','about'];
+            let ran = Math.floor(Math.random()*links.length);
             document.write(`
             <div class="card-light">
                 <nav class="${classes}">
                     <h4><b>Crumbs Nav</b></h4>
                     <ul>
                     ${links.reduce((r,o,i)=>{
-                        return r+`<li><a href="#">${o}</a></li>`;
+                        return r+`<li class="${ran==i?'active':''}"><a href="#">${o}</a></li>`;
                     },'')}
                     </ul>
                 </nav>
@@ -248,10 +251,17 @@
             <ul>
                 <li><a href="#">home</a></li>
                 <li><a href="#">store</a></li>
-                <li><a href="#">about</a></li>
+                <li class="active"><a href="#">about</a></li>
             </ul>
         </nav>
     </div>
+    <script>
+        $("#navigation li").on("click", function(e) {
+            e.preventDefault();
+            $(this).closest("li").addClass("active")
+            .siblings().removeClass("active")
+        })
+    </script>
 </div>
 
 
