--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -283,7 +283,7 @@
 
 <script>
     const makeTable = (classes='') => {
-        const head = ['Universe','Hero Name','Alter Ego','Rank'];
+        const head = ['ID','Universe','Hero Name','Alter Ego','Rank'];
         const body = [
             ['DC','Batman','Bruce Wayne','1'],
             ['DC','Deathstroke','Slade Wilson','2'],
@@ -311,26 +311,32 @@
     <hr>
     <br />
     <div class="card-light">
+        <h4><b>Basic Table</b></h4>
         <script>makeTable("table")</script>
     </div>
     <br />
     <div class="card-light">
+        <h4><b>Striped Table</b></h4>
         <script>makeTable("table striped")</script>
     </div>
     <br />
     <div class="card-light">
+        <h4><b>Lined Vertical Table</b></h4>
         <script>makeTable("table lined vertical")</script>
     </div>
     <br />
     <div class="card-light">
+        <h4><b>Lined Horizontal Table</b></h4>
         <script>makeTable("table lined horizontal")</script>
     </div>
     <br />
     <div class="card-light">
+        <h4><b>Lined Border Table</b></h4>
         <script>makeTable("table lined border")</script>
     </div>
     <br />
     <div class="card-light">
+        <h4><b>Fully Lined Table</b></h4>
         <script>makeTable("table lined all")</script>
     </div>
 </div>
