--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -58,6 +58,7 @@
             <li><a href="#gridsystem">Grid System</a></li>
             <li><a href="#flexsystem">Flex System</a></li>
             <li><a href="#tables">Tables</a></li>
+            <li><a href="#figures">Figures</a></li>
         </ul>
     </div>
 </div>
@@ -340,6 +341,119 @@
         <script>makeTable("table lined all")</script>
     </div>
 </div>
+
+
+<div class="container" id="figures">
+    <hr>
+    <h3 style="margin-left: 1rem;">FIGURES</h3>
+    <hr>
+    <br />
+    <div class="card-light">
+        <h4><b>Basic Figure</b></h4>
+        <figure class="figure">
+            <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+            <figcaption>Product</figcaption>
+        </figure>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4><b>Figure Grid</b></h4>
+        <div class="grid gap">
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>Product</figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>Product</figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>Product</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4><b>Product Grid</b></h4>
+        <div class="grid gap">
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure product">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>
+                        <div>T-Shirt</div>
+                        <div>$24.99</div>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure product">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>
+                        <div>Hoodie</div>
+                        <div>$34.99</div>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure product">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>
+                        <div>Socks</div>
+                        <div>$14.99</div>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4><b>Product Overlay</b></h4>
+        <div class="grid gap">
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure product-overlay">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>
+                        <div class="caption-body">
+                            <div>T-Shirt</div>
+                            <div>$24.99</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure product-overlay">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>
+                        <div class="caption-body">
+                            <div>Hoodie</div>
+                            <div>$34.99</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <figure class="figure product-overlay">
+                    <img src="https://i.imgur.com/q2EKStt.png" alt="Placeholder image" />
+                    <figcaption>
+                        <div class="caption-body">
+                            <div>Socks</div>
+                            <div>$14.99</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+</div>
+
+<button><a href="">Back to Top</a></button>
     
 
 </body>
