--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -22,7 +22,7 @@
     
 <!-- ** Navbar ** header>h1+p -->    
 <header class="display-flex flex-align-center navbar" id="top">
-    <div class="flex-none">
+    <div class="flex-none" style="margin-left: 7rem;">
         <a href="#">
             <div class="home-logo"></div>
         </a>
@@ -32,12 +32,6 @@
             <h4>esome&nbsp;&nbsp;Styleguide</h4>
         </a>
     </div>
-    <div class="flex-stretch"></div>
-    <nav class="flex-none nav">
-        <ul class="display-flex">
-            <li><a href="#tableofcontents">Table of Contents</a></li>
-        </ul>
-    </nav>
 </header>
 
 
