--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -51,6 +51,10 @@
             <li><a href="#tables">Tables</a></li>
             <li><a href="#hero">Product Hero</a></li>
             <li><a href="#figures">Figures</a></li>
+            <li><a href="#figures">Forms</a></li>
+            <ul>
+                <li><a href="#headings">Inputs</a></li>
+            </ul>
         </ul>
     </div>
 </div>
@@ -444,6 +448,38 @@
         </div>
     </div>
 </div>
+
+
+<!-- ** FORMS ** -->
+<div class="container" id="forms">
+    <hr>
+    <h3 style="margin-left: 1rem;">FORMS</h3>
+    <hr>
+    <br />
+    <h4><b>Inputs</b></h4>
+    <div class="card-light" id="inputs">
+        <h4><b>Default Inputs</b></h4>
+        <form>
+            <input type="text"><br />
+            <input type="number"><br />
+            <input type="password"><br />
+            <input type="url"><br />
+            <input type="email"><br />
+            <input type="datetime-local"><br />
+            <input type="date"><br />
+            <input type="search">
+        </form>
+    </div>
+    <div class="card-light" id="inputs">
+        <h4><b>Custom Input</b></h4>
+        <form>
+            <input type="text" class="form-input">
+        </form>
+    </div>
+</div>
+
+
+
 
 <div class="container">
     <button class="dark"><a href="#top">Back to Top&nbsp;&uarr;</a></button>
