--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -53,7 +53,8 @@
             <li><a href="#figures">Figures</a></li>
             <li><a href="#figures">Forms</a></li>
             <ul>
-                <li><a href="#headings">Inputs</a></li>
+                <li><a href="#default-inputs">Default Inputs</a></li>
+                <li><a href="#brand-inputs">Branded Inputs</a></li>
             </ul>
         </ul>
     </div>
@@ -457,7 +458,7 @@
     <hr>
     <br />
     <h4><b>Inputs</b></h4>
-    <div class="card-light" id="inputs">
+    <div class="card-light" id="default-inputs">
         <h4><b>Default Inputs</b></h4>
         <form>
             <input type="text"><br />
@@ -469,11 +470,16 @@
             <input type="date"><br />
             <input type="search">
         </form>
+        <br />
     </div>
-    <div class="card-light" id="inputs">
-        <h4><b>Custom Input</b></h4>
+    <br />
+    <div class="card-light" id="brand-inputs">
+        <h4><b>Branded Inputs</b></h4>
         <form>
-            <input type="text" class="form-input">
+            <input type="text" class="form-input" placeholder="Text"><br />
+            <input type="number" class="form-input" placeholder="Number"><br />
+            <input type="password" class="form-input" placeholder="Password"><br />
+            <input type="search" class="form-input" placeholder="Search">
         </form>
     </div>
 </div>
