--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -458,7 +458,7 @@
     <hr>
     <br />
     <h4><b>Inputs</b></h4>
-    <div class="card-light" id="default-inputs">
+    <div class="card-light">
         <h4><b>Default Inputs</b></h4>
         <form>
             <input type="text"><br />
@@ -473,13 +473,55 @@
         <br />
     </div>
     <br />
-    <div class="card-light" id="brand-inputs">
+    <div class="card-light">
         <h4><b>Branded Inputs</b></h4>
         <form>
             <input type="text" class="form-input" placeholder="Text"><br />
             <input type="number" class="form-input" placeholder="Number"><br />
             <input type="password" class="form-input" placeholder="Password"><br />
             <input type="search" class="form-input" placeholder="Search">
+        </form>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4><b>Form Labels</b></h4>
+        <form>
+            <label class="form-label">Example</label>
+            <input type="text" class="form-input" placeholder="Text"><br />
+            <label class="form-label">Example</label>
+            <input type="number" class="form-input" placeholder="Number"><br />
+            <label class="form-label">Example</label>
+            <input type="password" class="form-input" placeholder="Password"><br />
+            <label class="form-label">Example</label>
+            <input type="search" class="form-input" placeholder="Search">
+        </form>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4><b>Form Controls</b></h4>
+        <form>
+            <div class="form-control">
+                <label class="form-label">Example</label>
+                <input type="text" class="form-input" placeholder="Text">
+            </div>
+            <div class="form-control">
+                <label class="form-label">Example</label>
+                <input type="number" class="form-input" placeholder="Number">
+            </div>
+            <div class="form-control">
+                <label class="form-label">Example</label>
+                <input type="password" class="form-input" placeholder="Password">
+            </div>
+            <div class="form-control grid gap">
+                <div class="col-xs-12 col-md-6">
+                    <label class="form-label">Example</label>
+                    <input type="search" class="form-input" placeholder="Search">
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <label class="form-label">Example</label>
+                    <input type="search" class="form-input" placeholder="Search">
+                </div>
+            </div>
         </form>
     </div>
 </div>
