--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -56,6 +56,8 @@
                 <li><a href="#inputs">Inputs</a></li>
                 <li><a href="#buttons">Buttons</a></li>
                 <li><a href="#hotdog">Hotdog</a></li>
+                <li><a href="#select">Select</a></li>
+                <li><a href="#checkbox">Check Boxes</a></li>
             </ul>
         </ul>
     </div>
@@ -102,7 +104,7 @@
         </div>
         <div class="col-xs-12 col-md-4">
             <div class="card neutlight">
-                <h4>Neutral Light<br />&num;A5AABA</h4>
+                <h4>Neutral Light<br />&num;D0D2D8</h4>
             </div>
         </div>
         <div class="col-xs-12 col-md-4">
@@ -537,7 +539,7 @@
         <h4><b>Custom Button</b></h4>
         <button class="form-button form-control">Button</button>
         <input type="button" class="form-button form-control" value="Input">
-        <a href="#" class="form-button form-control">Anchor</a>
+        <a href="#buttons" class="form-button form-control">Anchor</a>
     </div>
     <br />
     <br />
@@ -565,13 +567,55 @@
             </form>
         </div>
     </div>
+    <br />
+    <br />
+    <h4 id="select"><b>Select</b></h4>
+    <div class="card-light">
+        <div class="form-select form-control">
+            <select>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+            </select>
+        </div>
+        <div class="display-flex">
+            <div class="flex-stretch"></div>
+            <div class="flex-none">
+                <div class="form-select">
+                    <select>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <br />
+    <h4 id="checkbox"><b>Check Boxes</b></h4>
+    <div class="card-light">
+        <h4><b>Basic Checkbox</b></h4>
+        <label>Label <input type="checkbox" id="input-1"></label>
+        <label for="input-1">Label</label>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4><b>Heart Checkbox</b></h4>
+        <div class="favorite">
+            <input type="checkbox" id="heart">
+            <label for="heart">&hearts;</label>
+        </div>
+    </div>
 </div>
 
 
 
-
+<!-- ** BACK TO TOP ** -->
 <div class="container">
-    <button class="dark"><a href="#top">Back to Top&nbsp;&uarr;</a></button>
+    <a href="#top"><button class="dark">Back to Top&nbsp;&uarr;</button></a>
 </div>
     
 
