--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -605,9 +605,29 @@
     <div class="card-light">
         <h4><b>Heart Checkbox</b></h4>
         <div class="favorite">
-            <input type="checkbox" id="heart">
+            <input type="checkbox" id="heart" class="hidden">
             <label for="heart">&hearts;</label>
         </div>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4><b>Toggle</b></h4>
+        <div class="toggle">
+            <input type="checkbox" id="toggle-1" class="hidden">
+            <label for="toggle-1"></label>
+        </div>
+        <div class="display-flex flex-align-center">
+            <div class="flex-stretch">
+                <label for="toggle-2" class="form-label">Display Warning!</label>
+            </div>
+            <div class="flex-none">
+                <div class="toggle">
+                    <input type="checkbox" id="toggle-2" class="hidden">
+                    <label for="toggle-2"></label>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
