--- a/chipman.abigail/styleguide/index.html
+++ b/chipman.abigail/styleguide/index.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,700;1,300;1,700&family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,400;1,700&family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>CSS Styleguide</title>
@@ -46,8 +46,8 @@
                 <ul>
                     <li><a href="#typography">Typography</a>
                         <ul>
-                            <li><a href="#headings">Headings</a></li>
-                            <li><a href="#paragraphs">Paragraphs</a></li>
+                            <li class="indent"><a href="#headings">Headings</a></li>
+                            <li class="indent"><a href="#paragraphs">Paragraphs</a></li>
                         </ul>
                     </li>
                     <li><a href="#colors">Colors</a></li>
@@ -58,13 +58,13 @@
                     <li><a href="#tables">Tables</a></li>
                     <li><a href="#forms">Forms</a>
                         <ul>
-                            <li><a href="#inputs">Inputs</a></li>
-                            <li><a href="#labels">Labels</a></li>
-                            <li><a href="#controls">Controls</a></li>
-                            <li><a href="#buttons">Buttons</a></li>
-                            <li><a href="#hotdog">Hotdog</a></li>
-                            <li><a href="#select">Select</a></li>
-                            <li><a href="#checkbox">Checkbox</a></li>
+                            <li class="indent"><a href="#inputs">Inputs</a></li>
+                            <li class="indent"><a href="#labels">Labels</a></li>
+                            <li class="indent"><a href="#controls">Controls</a></li>
+                            <li class="indent"><a href="#buttons">Buttons</a></li>
+                            <li class="indent"><a href="#hotdog">Hotdog</a></li>
+                            <li class="indent"><a href="#select">Select</a></li>
+                            <li class="indent"><a href="#checkbox">Checkbox</a></li>
                         </ul>
                     </li>
                     <li><a href="#figures">Figures</a></li>
